# cuda_hlt

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Dockerfile.tests  PrTableForFunction.cpp  PrTableForFunction.h  contributing.md  env.sh  readme.md  readme_cuda_developer.md  readme_docker.md  run_test.sh  setup_lab15.sh
catboost/: CMakeLists.txt  Findcatboost.cmake  Findflatbuffers.cmake
catboost/include/: Catboost.h  Evaluator.cuh  GenerateBinFeatures.cuh  TestCatboost.h
catboost/src/: Catboost.cpp  Evaluator.cu  GenerateBinFeatures.cu  TestCatboost.cpp
checker/: CMakeLists.txt  checkEfficiencies.cc  test.cc  velopix-input-reader.cc
checker/SOAContainer/: CMakeLists.txt
checker/SOAContainer/include/: SOAContainer.h  SOAIterator.h  SOATypelist.h
checker/clustering/: CMakeLists.txt
checker/clustering/include/: ClusteringChecker.h
checker/clustering/src/: ClusteringChecker.cpp
checker/include/: LHCbID.h  MCAssociator.h  MCParticle.h  SOAField.h  SOASkin.h  TrackChecker.h  TrackSerializer.h  Tracks.h
checker/lib/: #CMakeLists.txt#  .#CMakeLists.txt  CMakeLists.txt
checker/lib/SOAContainer/: README.md
checker/lib/include/: LHCbID.h  MCAssociator.h  MCParticle.h  TrackChecker.h  Tracks.h  VeloPixels.h  track_input_reader.h  velopix-input-reader.h
checker/lib/src/: CMakeLists.txt  MCAssociator.cc  TrackChecker.cc  velopix-input-reader.cc
checker/plotting/: LHCbStyle.py
checker/pv/: CMakeLists.txt
checker/pv/include/: PrimaryVertexChecker.h
checker/pv/src/: PrimaryVertexChecker.cpp
checker/src/: TrackSerializer.cc
checker/tests/: CMakeLists.txt
checker/tracking/: CMakeLists.txt  readme.md
checker/tracking/include/: CheckerInvoker.h  Histograms.h  KalmanChecker.h  LHCbID.h  MCAssociator.h  MCEvent.h  MCParticle.h  PrCheckerInvoker.h  PrepareKalmanTracks.h  PrepareTracks.h  TrackChecker.h  Tracks.h  velopix-input-reader.h
checker/tracking/python_scripts/: ConfigHistos.py  Legend.py  draw_docaz.py  draw_ip_resolution.py  efficiency_plots.py  efficiency_plots.root  ip_resolution.py  kalman_momentum_resolution.py  momentum_resolution.py
checker/tracking/src/: CategoriesTrackChecker.cpp  CheckerInvoker.cpp  KalmanChecker.cpp  MCAssociator.cc  MCAssociator.cpp  MCEvent.cpp  PrCheckerInvoker.cpp  PrepareKalmanTracks.cpp  PrepareTracks.cpp  TrackChecker.cc  TrackChecker.cpp  velopix-input-reader.cc  velopix-input-reader.cpp
cuda/PV/: CMakeLists.txt
cuda/PV/beamlinePV/: CMakeLists.txt
cuda/PV/patPV/: CMakeLists.txt
cuda/SciFi/: CMakeLists.txt
cuda/SciFi/PrForward/: README.md
cuda/UT/: CMakeLists.txt
cuda/UT/compassUT/: README.md
cuda/associate/: CMakeLists.txt
cuda/associate/include/: AssociateConstants.cuh  VeloPVIP.cuh
cuda/associate/src/: VeloPVIP.cu
cuda/global_event_cut/: CMakeLists.txt
cuda/global_event_cut/include/: GlobalEventCut.cuh  InitEventList.cuh
cuda/global_event_cut/src/: GlobalEventCut.cu  InitEventList.cu
cuda/ip_cut/: CMakeLists.txt
cuda/ip_cut/include/: IPCut.cuh  IPCutValues.cuh
cuda/ip_cut/src/: IPCut.cu
cuda/kalman/: CMakeLists.txt
cuda/muon/: CMakeLists.txt
cuda/muon/tests/: TestFeatures.cu  TestFeatures.cuh  dev_atomics_scifi  dev_scifi_qop  dev_scifi_track_hit_number  dev_ut_indices
cuda/utils/: CMakeLists.txt
cuda/utils/include/: Sorting.cuh
cuda/velo/: CMakeLists.txt  readme.md
mdf/: CMakeLists.txt
mdf/include/: compression.hpp  mdf_header.hpp  odin.hpp  raw_bank.hpp  raw_helpers.hpp  read_mdf.hpp
mdf/src/: compression.cpp  raw_helpers.cpp  read_mdf.cpp
mdf/test/: dump_banks.cpp  test_read.cpp  test_read_bin.cpp
stream/: CMakeLists.txt  Findflatbuffers.cmake
stream/checkers/include/: KalmanSequenceCheckers_impl.cuh  PVSequenceCheckers_impl.cuh  SciFiSequenceCheckers_impl.cuh  UTSequenceCheckers_impl.cuh  VeloSequenceCheckers_impl.cuh
stream/gear/include/: Argument.cuh  ArgumentManager.cuh  Common.cuh  CpuHandler.cuh  Handler.cuh  Helper.cuh  MemoryManager.cuh  Scheduler.cuh  SchedulerMachinery.cuh  Sequence.cuh  TupleIndicesChecker.cuh  TupleTools.cuh
stream/handlers/include/: Argument.cuh  CalculatePhiAndSort.cuh  ConsolidateTracks.cuh  EstimateInputSize.cuh  HandleCalculatePhiAndSort.cuh  HandleConsolidateTracks.cuh  HandleCopyAndPrefixSumSingleBlock.cuh  HandleEstimateInputSize.cuh  HandleMaskedVeloClustering.cuh  HandlePrefixSumReduce.cuh  HandlePrefixSumScan.cuh  HandleSearchByTriplet.cuh  HandleSimplifiedKalmanFilter.cuh  Handler.cuh  HandlerCalculatePhiAndSort.cuh  HandlerDispatcher.cuh  HandlerEstimateInputSize.cuh  HandlerMaker.cuh  Helper.cuh  MaskedVeloClustering.cuh  Measurable.cuh  PrefixSum.cuh  PrefixSumScan.cuh  PrefixSumSingleBlock.cuh  SearchByTriplet.cuh  Sequence.cuh  SimplifiedKalmanFilter.cuh  TupleIndicesChecker.cuh
stream/handlers/src/: CalculatePhiAndSort.cu  EstimateInputSize.cu  HandleCalculatePhiAndSort.cu  HandleConsolidateTracks.cu  HandleCopyAndPrefixSumSingleBlock.cu  HandleEstimateInputSize.cu  HandlePrefixSum.cu  (+13 more)
stream/include/: CalculatePhiAndSort.cuh  CalculateVeloStates.cuh  ConsolidateTracks.cuh  EstimateInputSize.cuh  HandleCalculatePhiAndSort.cuh  HandleCalculateVeloStates.cuh  HandleConsolidateTracks.cuh  HandleSearchByTriplet.cuh  Helper.cuh  MaskedVeloClustering.cuh  Measurable.cuh  PrefixSum.cuh  SearchByTriplet.cuh  Stream.cuh
stream/src/: CalculatePhiAndSort.cu  CalculateVeloStates.cu  ConsolidateTracks.cu  HandleCalculatePhiAndSort.cu  HandleCalculateVeloStates.cu  HandleConsolidateTracks.cu  HandleSearchByTriplet.cu  MaskedVeloClustering.cu  SearchByTriplet.cu  Stream.cu  StreamInitialize.cu
tests/: CMakeLists.txt  IsMuon.test.cu  MuonCatboost.test.cpp  MuonCatboost.test.cu  MuonCatboostKernel.cu  MuonCatboostKernel.cuh  MuonCoordsToMuonCommonHits.test.cu  MuonFeaturesExtraction.test.cu  MuonFeaturesExtraction.test.cuh  readme_tests.md  run_test.sh
tests/muon_catboost/: CMakeLists.txt  MuonCatboost.test.cpp  MuonCatboostKernel.cu
tests/muon_features_extraction/: CMakeLists.txt  MuonFeaturesExtraction.test.cu
x86/SciFi/: CMakeLists.txt
x86/forward/: CMakeLists.txt
(+716 files in other folders)
